# sms-eagle

./: alltemplates.txt  app.py  blacklist.txt  config.json  message.txt  participants.csv  pyproject.toml  sms_sender.py
templates/: all-phone-numbers-table.html  base.html  configure.html  failed-phone-numbers-table.html  index.html  job-information-card.html  logging.html  login.html  open-job.html  sms-sender-card.html  sms-sender-form.html  successful-phone-numbers-table.html  user-data.html
