[tool.poetry]
name = "sms-eagle"
version = "0.1.0"
description = ""
authors = ["stevan06v <stevanvlajic5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"
python-jsonstore = "^1.3.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
bootstrap-flask = "^2.4.0"
twilio = "^9.2.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
